# dgii_encf

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: backend-ci.yml  ci-cd.yml  ci.yml  dast-zap.yml  frontend-ci.yml
alembic/: env.py
alembic/versions/: 20240507_0001_init.py  20240509_0002_accounting.py  20240510_0001_add_indices.py
app/: __init__.py  db.py  main.py
app/admin/: schemas.py
app/api/: enfc_routes.py  router.py
app/api/routes/: auth.py  dgii.py  receptor.py  (+1 more)
app/auth/: deps.py  repository.py  routes.py  schemas.py  service.py
app/billing/: acecf_builder.py  anecf_builder.py  arecf_builder.py  ecf_builder.py  rfce_builder.py  routes.py  services.py  validators.py
app/core/: auth.py  config.py  logging.py
app/dgii/: adapters.py  client.py  clients.py  exceptions.py  file_naming.py  jobs.py  retry.py  routes.py  schemas.py  signing.py  validation.py
app/infra/: logging.py  settings.py
app/models/: __init__.py  accounting.py  anecf.py  approval.py  audit.py  base.py  billing.py  invoice.py  receipt.py  rfce.py  storage.py  tenant.py  user.py
app/portal_admin/: __init__.py  reports.py
app/receiver/: routes.py  schemas.py  validators.py
app/ri/: render.py  router.py  routes.py  schemas.py
app/routers/: acuse.py  admin.py  anulacion.py  aprobacion.py  auth.py  cliente.py  dependencies.py  recepcion.py  rfce.py
app/security/: auth.py  http_client.py  rate_limit.py  signing.py  xml.py  xml_verify.py
app/services/: aprobacion_service.py  auth_service.py  dgii_client.py  idempotency.py  recepcion_service.py
app/shared/: database.py  exceptions.py  hmac.py  security.py  settings.py  storage.py  tracing.py  utils.py
app/sign/: routes.py  schemas.py  service.py  utils_xmlsig.py
app/tests/: conftest.py
app/utils/: fastapi_limiter_stub.py  redis_stub.py
deploy/: Dockerfile.api  Dockerfile.nginx  docker-compose.yml  nginx.conf
deploy/grafana/: README.md
deploy/k8s/: README.md
deploy/prom/: alerts.yml
docker/: nginx.conf
docs/: DGII-Guia-Implementacion.md  SEGURIDAD-PROVEEDOR.md
docs/compliance/: BACKUP_RESTORE.md  BITACORA.md  CONTACTO_DGII.md  CONTINGENCIA.md  PRIVACIDAD_172-13.md  SEGURIDAD.md  SOPORTE_SLA.md
docs/guide/: 00-overview.md  01-dgii-ambientes-y-servicios.md  02-firmado-xmldsig.md  03-modelos-ecf-rfce-arecf-acecf.md  04-representacion-impresa.md  05-delegaciones-roles.md  06-certificacion-checklist.md  07-endpoints-spec.md  08-estructura-proyecto.md  09-seguridad-cumplimiento.md  10-testing-aceptacion.md  12-scripts-operativos.md  13-planes-tarifas.md  14-frontend-rbac.md  15-implementacion-aws.md  16-arquitectura-eks.md
frontend/: README.md  package.json  tsconfig.base.json
infra/nginx/: app.conf
openapi/: dgii.yaml
ops/: nginx.conf
samples/: acecf_valid.xml  anecf_valid.xml  arecf_valid.xml  ecf_valid.xml  rfce_valid.xml
schemas/: ACECF.xsd  ANECF.xsd  ARECF.xsd  ECF.xsd  RFCE.xsd
scripts/: deploy.sh  encrypt_env.py  install.sh  sample_curl.sh  setup_env.py
tests/: conftest.py  test_admin_accounting.py  test_client.py  test_clients_contract.py  test_e2e_local.py  test_enfc_endpoints.py  test_file_naming.py  test_http_ssrf.py  test_receptor.py  test_signing.py  test_smoke.py  test_validation.py  test_xsd_validation.py
tests/assets/: sample_acecf.xml  sample_arecf.xml  sample_ecf_32.xml  sample_rfce.xml
tools/: pdf_utils.py
xsd/: ACECF v.1.0.xsd  ANECF v.1.0.xsd  ARECF v1.0.xsd  RFCE 32 v.1.0.xsd  acecf.xsd  aprobacion_v1_0.xsd  arecf.xsd  e-CF 31 v.1.0.xsd  e-CF 32 v.1.0.xsd  e-CF 33 v.1.0.xsd  e-CF 34 v.1.0.xsd  e-CF 41 v.1.0.xsd  e-CF 43 v.1.0.xsd  e-CF 44 v.1.0.xsd  e-CF 45 v.1.0.xsd  e-CF 46 v.1.0.xsd  e-CF 47 v.1.0.xsd  e_cf_v1_0.xsd  ecf.xsd  rfce.xsd
(+367 files in other folders)
