[tool.poetry]
name = "getupnet"
version = "0.1.0"
description = "Plataforma DGII e-CF"
authors = ["GetUpSoft <info@getupsoft.do>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.29"
psycopg = {version = "^3.1.18", extras = ["binary"]}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
pyotp = "^2.9.0"
argon2-cffi = "^23.1.0"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
cryptography = "^42.0.5"
jwt = "^1.3.1"
structlog = "^24.2.0"
lxml = "^5.2.1"
signxml = "^3.2.5"
qrcode = "^7.4.2"
pillow = "^10.3.0"
tenacity = "^8.2.3"
python-multipart = "^0.0.9"
reportlab = "^4.1.0"
defusedxml = "^0.7.1"
slowapi = "^0.1.9"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
respx = "^0.21.1"
ruff = "^0.4.4"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240523"
freezegun = "^1.5.1"

[tool.pytest.ini_options]
testpaths = ["app/tests", "tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
