[tool.poetry]
name = "getupnet"
version = "0.1.0"
description = "Plataforma DGII e-CF"
authors = ["GetUpSoft <info@getupsoft.do>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.29"
psycopg = {version = "^3.1.18", extras = ["binary"]}
asyncpg = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
pyotp = "^2.9.0"
argon2-cffi = "^23.1.0"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
cryptography = "^46.0.3"
jwt = "^1.3.1"
structlog = "^24.2.0"
lxml = "^5.2.1"
signxml = "^3.2.2"
pyopenssl = "^24.1.0"
qrcode = "^7.4.2"
pillow = "^10.3.0"
tenacity = "^8.2.3"
python-multipart = "^0.0.9"
reportlab = "^4.1.0"
defusedxml = "^0.7.1"
python-json-logger = "^2.0.7"
redis = "^5.0.4"
fastapi-limiter = "^0.1.6"
prometheus-fastapi-instrumentator = "^7.0.0"
sentry-sdk = "^1.44.0"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
respx = "^0.21.1"
ruff = "^0.4.4"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240523"
freezegun = "^1.5.1"
fakeredis = {extras = ["json"], version = "^2.23.4"}
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
testpaths = ["app/tests", "tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
